// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Average vibrancy > evidenceCopy uses moderate language for vibrancy 55 1`] = `
{
  "canChange": [
    {
      "category": "vision",
      "changeability": "flexible",
      "copy": "Concept detail is partially filled — adding more concept detail will sharpen your score.",
      "direction": "neutral",
      "key": "visionScore",
      "label": "Concept detail",
      "value": 60,
    },
  ],
  "cannotChange": [
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong transit coverage — your target customer can reach this block easily.",
      "direction": "positive",
      "key": "transit",
      "label": "Transit access",
      "value": 75,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Demographics align with your price point and target customer profile.",
      "direction": "positive",
      "key": "demographics",
      "label": "Demographics",
      "value": 70,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Low competition density — this block doesn't yet have a strong coffee shop player.",
      "direction": "positive",
      "key": "competition",
      "label": "Competition density",
      "value": 72,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong safety profile — this shouldn't deter your target customer.",
      "direction": "positive",
      "key": "safety",
      "label": "Safety profile",
      "value": 80,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Moderate morning foot traffic — some commuter flow, but you'll supplement with regulars and destination visits.",
      "direction": "neutral",
      "key": "vibrancy",
      "label": "Area vibrancy",
      "value": 55,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Stable neighbourhood — not declining, but not generating tail-winds either.",
      "direction": "neutral",
      "key": "momentum",
      "label": "Neighbourhood momentum",
      "value": 65,
    },
    {
      "category": "financials",
      "changeability": "fixed",
      "copy": "Strong business survival track record — similar businesses on this block have an above-average chance of making it past year 1.",
      "direction": "positive",
      "key": "survivalRate",
      "label": "Year-1 business survival",
      "value": 70,
    },
  ],
  "helping": [
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong safety profile — this shouldn't deter your target customer.",
      "direction": "positive",
      "key": "safety",
      "label": "Safety profile",
      "value": 80,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong transit coverage — your target customer can reach this block easily.",
      "direction": "positive",
      "key": "transit",
      "label": "Transit access",
      "value": 75,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Low competition density — this block doesn't yet have a strong coffee shop player.",
      "direction": "positive",
      "key": "competition",
      "label": "Competition density",
      "value": 72,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Demographics align with your price point and target customer profile.",
      "direction": "positive",
      "key": "demographics",
      "label": "Demographics",
      "value": 70,
    },
    {
      "category": "financials",
      "changeability": "fixed",
      "copy": "Strong business survival track record — similar businesses on this block have an above-average chance of making it past year 1.",
      "direction": "positive",
      "key": "survivalRate",
      "label": "Year-1 business survival",
      "value": 70,
    },
  ],
  "hurting": [],
}
`;

exports[`High competitors > getDecisionState surfaces competition pressure 1`] = `
{
  "action": "Explore a different location →",
  "color": "red",
  "headline": "Rethink",
  "reasons": [
    "Neighborhood is declining.",
    "High competition density.",
  ],
  "state": "do_not_pursue",
  "summary": "A score of 35 indicates serious misalignment between this location and this concept. This is not a signal to give up — it's a diagnosis. The concept or the block, or both, need to change.",
}
`;

exports[`High competitors > getEvidencePayload marks low competition as negative 1`] = `
{
  "canChange": [
    {
      "category": "vision",
      "changeability": "flexible",
      "copy": "Weak market proof — limited evidence that a coffee shop has worked in this immediate area.",
      "direction": "negative",
      "key": "marketProof",
      "label": "Market proof",
      "value": 30,
    },
    {
      "category": "vision",
      "changeability": "flexible",
      "copy": "Concept detail is thin — filling in concept details could add 8–14 points to your score.",
      "direction": "neutral",
      "key": "visionScore",
      "label": "Concept detail",
      "value": 50,
    },
  ],
  "cannotChange": [
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Limited transit access — capturing walk-in traffic will take extra marketing effort.",
      "direction": "negative",
      "key": "transit",
      "label": "Transit access",
      "value": 30,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Demographic mismatch — the neighbourhood profile doesn't fit a coffee shop at your target price point.",
      "direction": "negative",
      "key": "demographics",
      "label": "Demographics",
      "value": 35,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "High competition density — you'd be entering a crowded market on this block.",
      "direction": "negative",
      "key": "competition",
      "label": "Competition density",
      "value": 25,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Safety concerns on this block — could affect footfall quality and conversion.",
      "direction": "negative",
      "key": "safety",
      "label": "Safety profile",
      "value": 40,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Low morning rush energy — this block won't hand you commuters. Plan for destination marketing and a loyal-regular model.",
      "direction": "negative",
      "key": "vibrancy",
      "label": "Area vibrancy",
      "value": 28,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Neighbourhood is declining — this adds execution risk beyond the concept itself.",
      "direction": "negative",
      "key": "momentum",
      "label": "Neighbourhood momentum",
      "value": 20,
    },
    {
      "category": "financials",
      "changeability": "fixed",
      "copy": "Above-average business turnover here — this is a meaningful risk signal to weigh against your fit.",
      "direction": "negative",
      "key": "survivalRate",
      "label": "Year-1 business survival",
      "value": 35,
    },
  ],
  "helping": [],
  "hurting": [
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Neighbourhood is declining — this adds execution risk beyond the concept itself.",
      "direction": "negative",
      "key": "momentum",
      "label": "Neighbourhood momentum",
      "value": 20,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "High competition density — you'd be entering a crowded market on this block.",
      "direction": "negative",
      "key": "competition",
      "label": "Competition density",
      "value": 25,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Low morning rush energy — this block won't hand you commuters. Plan for destination marketing and a loyal-regular model.",
      "direction": "negative",
      "key": "vibrancy",
      "label": "Area vibrancy",
      "value": 28,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Limited transit access — capturing walk-in traffic will take extra marketing effort.",
      "direction": "negative",
      "key": "transit",
      "label": "Transit access",
      "value": 30,
    },
    {
      "category": "vision",
      "changeability": "flexible",
      "copy": "Weak market proof — limited evidence that a coffee shop has worked in this immediate area.",
      "direction": "negative",
      "key": "marketProof",
      "label": "Market proof",
      "value": 30,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Demographic mismatch — the neighbourhood profile doesn't fit a coffee shop at your target price point.",
      "direction": "negative",
      "key": "demographics",
      "label": "Demographics",
      "value": 35,
    },
    {
      "category": "financials",
      "changeability": "fixed",
      "copy": "Above-average business turnover here — this is a meaningful risk signal to weigh against your fit.",
      "direction": "negative",
      "key": "survivalRate",
      "label": "Year-1 business survival",
      "value": 35,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Safety concerns on this block — could affect footfall quality and conversion.",
      "direction": "negative",
      "key": "safety",
      "label": "Safety profile",
      "value": 40,
    },
  ],
}
`;

exports[`Rethink (fitIQ 30) > full decision state snapshot 1`] = `
{
  "action": "Explore a different location →",
  "color": "red",
  "headline": "Rethink",
  "reasons": [
    "Neighborhood is declining.",
    "High competition density.",
  ],
  "state": "do_not_pursue",
  "summary": "A score of 30 indicates serious misalignment between this location and this concept. This is not a signal to give up — it's a diagnosis. The concept or the block, or both, need to change.",
}
`;

exports[`Strong go (fitIQ 82) > concept coaching snapshot 1`] = `
{
  "activeRisks": [],
  "nextSteps": [
    "The fundamentals are strong for a coffee shop. Build your financial model to stress-test the revenue assumptions.",
  ],
  "revenueContext": "Revenue is driven by daily transaction volume — foot traffic is the primary lever.",
  "title": "Specialty Coffee — what this concept needs",
}
`;

exports[`Strong go (fitIQ 82) > evidence payload snapshot 1`] = `
{
  "canChange": [
    {
      "category": "vision",
      "changeability": "flexible",
      "copy": "Your concept details are well-defined — your concept details are contributing meaningfully to your score.",
      "direction": "positive",
      "key": "visionScore",
      "label": "Concept detail",
      "value": 70,
    },
  ],
  "cannotChange": [
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong transit coverage — your target customer can reach this block easily.",
      "direction": "positive",
      "key": "transit",
      "label": "Transit access",
      "value": 75,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Demographics align with your price point and target customer profile.",
      "direction": "positive",
      "key": "demographics",
      "label": "Demographics",
      "value": 70,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Low competition density — this block doesn't yet have a strong coffee shop player.",
      "direction": "positive",
      "key": "competition",
      "label": "Competition density",
      "value": 72,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong safety profile — this shouldn't deter your target customer.",
      "direction": "positive",
      "key": "safety",
      "label": "Safety profile",
      "value": 80,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Moderate morning foot traffic — some commuter flow, but you'll supplement with regulars and destination visits.",
      "direction": "neutral",
      "key": "vibrancy",
      "label": "Area vibrancy",
      "value": 68,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Stable neighbourhood — not declining, but not generating tail-winds either.",
      "direction": "neutral",
      "key": "momentum",
      "label": "Neighbourhood momentum",
      "value": 65,
    },
    {
      "category": "financials",
      "changeability": "fixed",
      "copy": "Strong business survival track record — similar businesses on this block have an above-average chance of making it past year 1.",
      "direction": "positive",
      "key": "survivalRate",
      "label": "Year-1 business survival",
      "value": 70,
    },
  ],
  "helping": [
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong safety profile — this shouldn't deter your target customer.",
      "direction": "positive",
      "key": "safety",
      "label": "Safety profile",
      "value": 80,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong transit coverage — your target customer can reach this block easily.",
      "direction": "positive",
      "key": "transit",
      "label": "Transit access",
      "value": 75,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Low competition density — this block doesn't yet have a strong coffee shop player.",
      "direction": "positive",
      "key": "competition",
      "label": "Competition density",
      "value": 72,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Demographics align with your price point and target customer profile.",
      "direction": "positive",
      "key": "demographics",
      "label": "Demographics",
      "value": 70,
    },
    {
      "category": "financials",
      "changeability": "fixed",
      "copy": "Strong business survival track record — similar businesses on this block have an above-average chance of making it past year 1.",
      "direction": "positive",
      "key": "survivalRate",
      "label": "Year-1 business survival",
      "value": 70,
    },
    {
      "category": "vision",
      "changeability": "flexible",
      "copy": "Your concept details are well-defined — your concept details are contributing meaningfully to your score.",
      "direction": "positive",
      "key": "visionScore",
      "label": "Concept detail",
      "value": 70,
    },
  ],
  "hurting": [],
}
`;

exports[`Strong go (fitIQ 82) > full decision state snapshot 1`] = `
{
  "action": "Build your financial case →",
  "color": "green",
  "headline": "Strong Path",
  "reasons": [
    "Strong safety profile.",
    "Strong transit access.",
  ],
  "state": "strong_go",
  "summary": "A score of 82 means this concept-location pairing has strong fundamentals. The block works for a coffee shop and the signals back it up.",
}
`;

exports[`Survival ghost absent (survivalRate = 0) > getEvidencePayload does NOT emit survivalRate copy when score is 0 1`] = `
{
  "canChange": [
    {
      "category": "vision",
      "changeability": "flexible",
      "copy": "Concept detail is partially filled — adding more concept detail will sharpen your score.",
      "direction": "neutral",
      "key": "visionScore",
      "label": "Concept detail",
      "value": 65,
    },
  ],
  "cannotChange": [
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong transit coverage — your target customer can reach this block easily.",
      "direction": "positive",
      "key": "transit",
      "label": "Transit access",
      "value": 75,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Demographics align with your price point and target customer profile.",
      "direction": "positive",
      "key": "demographics",
      "label": "Demographics",
      "value": 70,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Low competition density — this block doesn't yet have a strong coffee shop player.",
      "direction": "positive",
      "key": "competition",
      "label": "Competition density",
      "value": 72,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong safety profile — this shouldn't deter your target customer.",
      "direction": "positive",
      "key": "safety",
      "label": "Safety profile",
      "value": 80,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Moderate morning foot traffic — some commuter flow, but you'll supplement with regulars and destination visits.",
      "direction": "neutral",
      "key": "vibrancy",
      "label": "Area vibrancy",
      "value": 68,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Stable neighbourhood — not declining, but not generating tail-winds either.",
      "direction": "neutral",
      "key": "momentum",
      "label": "Neighbourhood momentum",
      "value": 65,
    },
  ],
  "helping": [
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong safety profile — this shouldn't deter your target customer.",
      "direction": "positive",
      "key": "safety",
      "label": "Safety profile",
      "value": 80,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong transit coverage — your target customer can reach this block easily.",
      "direction": "positive",
      "key": "transit",
      "label": "Transit access",
      "value": 75,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Low competition density — this block doesn't yet have a strong coffee shop player.",
      "direction": "positive",
      "key": "competition",
      "label": "Competition density",
      "value": 72,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Demographics align with your price point and target customer profile.",
      "direction": "positive",
      "key": "demographics",
      "label": "Demographics",
      "value": 70,
    },
  ],
  "hurting": [],
}
`;

exports[`Vision preliminary > decision state notes vision is preliminary in reasons 1`] = `
{
  "action": "See what to improve →",
  "color": "amber",
  "headline": "Tight",
  "reasons": [
    "Strong safety profile.",
    "Adequate transit access.",
    "Vision score is preliminary — add concept details to sharpen this result.",
  ],
  "state": "worth_testing",
  "summary": "A score of 60 means this version isn't yet strong enough to act on with confidence. The block has potential, but key signals need improvement before this becomes a clear opportunity.",
}
`;

exports[`Vision preliminary > evidence payload injects concept-details notice 1`] = `
{
  "canChange": [
    {
      "category": "vision",
      "changeability": "flexible",
      "copy": "We're scoring without your concept details. Add them to sharpen this by ~8 points.",
      "direction": "neutral",
      "key": "visionScore",
      "label": "Concept detail",
      "value": 0,
    },
  ],
  "cannotChange": [
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong transit coverage — your target customer can reach this block easily.",
      "direction": "positive",
      "key": "transit",
      "label": "Transit access",
      "value": 75,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Demographics align with your price point and target customer profile.",
      "direction": "positive",
      "key": "demographics",
      "label": "Demographics",
      "value": 70,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Low competition density — this block doesn't yet have a strong coffee shop player.",
      "direction": "positive",
      "key": "competition",
      "label": "Competition density",
      "value": 72,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong safety profile — this shouldn't deter your target customer.",
      "direction": "positive",
      "key": "safety",
      "label": "Safety profile",
      "value": 80,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Moderate morning foot traffic — some commuter flow, but you'll supplement with regulars and destination visits.",
      "direction": "neutral",
      "key": "vibrancy",
      "label": "Area vibrancy",
      "value": 68,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Stable neighbourhood — not declining, but not generating tail-winds either.",
      "direction": "neutral",
      "key": "momentum",
      "label": "Neighbourhood momentum",
      "value": 65,
    },
    {
      "category": "financials",
      "changeability": "fixed",
      "copy": "Strong business survival track record — similar businesses on this block have an above-average chance of making it past year 1.",
      "direction": "positive",
      "key": "survivalRate",
      "label": "Year-1 business survival",
      "value": 70,
    },
  ],
  "helping": [
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong safety profile — this shouldn't deter your target customer.",
      "direction": "positive",
      "key": "safety",
      "label": "Safety profile",
      "value": 80,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong transit coverage — your target customer can reach this block easily.",
      "direction": "positive",
      "key": "transit",
      "label": "Transit access",
      "value": 75,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Low competition density — this block doesn't yet have a strong coffee shop player.",
      "direction": "positive",
      "key": "competition",
      "label": "Competition density",
      "value": 72,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Demographics align with your price point and target customer profile.",
      "direction": "positive",
      "key": "demographics",
      "label": "Demographics",
      "value": 70,
    },
    {
      "category": "financials",
      "changeability": "fixed",
      "copy": "Strong business survival track record — similar businesses on this block have an above-average chance of making it past year 1.",
      "direction": "positive",
      "key": "survivalRate",
      "label": "Year-1 business survival",
      "value": 70,
    },
  ],
  "hurting": [],
}
`;

exports[`Watch Out trigger — safety < 50 > getDecisionState surfaces safety in reasons 1`] = `
{
  "action": "See what to improve →",
  "color": "amber",
  "headline": "Tight",
  "reasons": [
    "Strong transit access.",
    "Low competition density — room to own this block.",
    "Safety concerns on this block.",
  ],
  "state": "worth_testing",
  "summary": "A score of 55 means this version isn't yet strong enough to act on with confidence. The block has potential, but key signals need improvement before this becomes a clear opportunity.",
}
`;

exports[`Watch Out trigger — safety < 50 > getEvidencePayload puts safety in hurting 1`] = `
{
  "canChange": [
    {
      "category": "vision",
      "changeability": "flexible",
      "copy": "Concept detail is partially filled — adding more concept detail will sharpen your score.",
      "direction": "neutral",
      "key": "visionScore",
      "label": "Concept detail",
      "value": 60,
    },
  ],
  "cannotChange": [
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong transit coverage — your target customer can reach this block easily.",
      "direction": "positive",
      "key": "transit",
      "label": "Transit access",
      "value": 75,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Demographics align with your price point and target customer profile.",
      "direction": "positive",
      "key": "demographics",
      "label": "Demographics",
      "value": 70,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Low competition density — this block doesn't yet have a strong coffee shop player.",
      "direction": "positive",
      "key": "competition",
      "label": "Competition density",
      "value": 72,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Safety concerns on this block — could affect footfall quality and conversion.",
      "direction": "negative",
      "key": "safety",
      "label": "Safety profile",
      "value": 38,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Moderate morning foot traffic — some commuter flow, but you'll supplement with regulars and destination visits.",
      "direction": "neutral",
      "key": "vibrancy",
      "label": "Area vibrancy",
      "value": 68,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Stable neighbourhood — not declining, but not generating tail-winds either.",
      "direction": "neutral",
      "key": "momentum",
      "label": "Neighbourhood momentum",
      "value": 65,
    },
    {
      "category": "financials",
      "changeability": "fixed",
      "copy": "Strong business survival track record — similar businesses on this block have an above-average chance of making it past year 1.",
      "direction": "positive",
      "key": "survivalRate",
      "label": "Year-1 business survival",
      "value": 70,
    },
  ],
  "helping": [
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong transit coverage — your target customer can reach this block easily.",
      "direction": "positive",
      "key": "transit",
      "label": "Transit access",
      "value": 75,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Low competition density — this block doesn't yet have a strong coffee shop player.",
      "direction": "positive",
      "key": "competition",
      "label": "Competition density",
      "value": 72,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Demographics align with your price point and target customer profile.",
      "direction": "positive",
      "key": "demographics",
      "label": "Demographics",
      "value": 70,
    },
    {
      "category": "financials",
      "changeability": "fixed",
      "copy": "Strong business survival track record — similar businesses on this block have an above-average chance of making it past year 1.",
      "direction": "positive",
      "key": "survivalRate",
      "label": "Year-1 business survival",
      "value": 70,
    },
  ],
  "hurting": [
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Safety concerns on this block — could affect footfall quality and conversion.",
      "direction": "negative",
      "key": "safety",
      "label": "Safety profile",
      "value": 38,
    },
  ],
}
`;

exports[`Zero competitors (score 40 sentinel) > getDecisionState does NOT say "high competition" 1`] = `
{
  "action": "See what to improve →",
  "color": "amber",
  "headline": "Tight",
  "reasons": [
    "Strong safety profile.",
    "Adequate transit access.",
    "Unproven market — no established competition yet.",
  ],
  "state": "worth_testing",
  "summary": "A score of 62 means this version isn't yet strong enough to act on with confidence. The block has potential, but key signals need improvement before this becomes a clear opportunity.",
}
`;

exports[`Zero competitors (score 40 sentinel) > getEvidencePayload labels 0-count correctly 1`] = `
{
  "canChange": [
    {
      "category": "vision",
      "changeability": "flexible",
      "copy": "Concept detail is partially filled — adding more concept detail will sharpen your score.",
      "direction": "neutral",
      "key": "visionScore",
      "label": "Concept detail",
      "value": 55,
    },
  ],
  "cannotChange": [
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Moderate transit access — some customers will find this convenient, others won't.",
      "direction": "neutral",
      "key": "transit",
      "label": "Transit access",
      "value": 65,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Demographic fit is moderate — income and density are workable but not ideal.",
      "direction": "neutral",
      "key": "demographics",
      "label": "Demographics",
      "value": 60,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong safety profile — this shouldn't deter your target customer.",
      "direction": "positive",
      "key": "safety",
      "label": "Safety profile",
      "value": 70,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Moderate morning foot traffic — some commuter flow, but you'll supplement with regulars and destination visits.",
      "direction": "neutral",
      "key": "vibrancy",
      "label": "Area vibrancy",
      "value": 55,
    },
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Stable neighbourhood — not declining, but not generating tail-winds either.",
      "direction": "neutral",
      "key": "momentum",
      "label": "Neighbourhood momentum",
      "value": 60,
    },
    {
      "category": "financials",
      "changeability": "fixed",
      "copy": "Business survival in line with the NYC average for this block type.",
      "direction": "neutral",
      "key": "survivalRate",
      "label": "Year-1 business survival",
      "value": 60,
    },
  ],
  "helping": [
    {
      "category": "location",
      "changeability": "fixed",
      "copy": "Strong safety profile — this shouldn't deter your target customer.",
      "direction": "positive",
      "key": "safety",
      "label": "Safety profile",
      "value": 70,
    },
  ],
  "hurting": [],
}
`;

exports[`getScoreInterpretation > strong path snapshot 1`] = `
{
  "bandName": "Strong Path zone",
  "bandRange": "75–100",
  "gapToNext": 0,
  "interpretation": "A score of 82 means the fundamentals are strong. This concept-location pairing is in the top tier — the block works and the concept signals back it up.",
  "leverCopy": "Your concept details have more room than the location. Sharpening your concept profile is the fastest path to a higher score.",
  "nextBandName": null,
  "primaryLever": "concept",
}
`;

exports[`getScoreInterpretation > tight band shows gap to viable 1`] = `
{
  "bandName": "Tight zone",
  "bandRange": "50–64",
  "gapToNext": 10,
  "interpretation": "A score of 55 means this version of the plan has potential but significant gaps. It's not ready to act on — but the right refinements could move it 10 points into Go territory.",
  "leverCopy": "Your concept details (50) are the main lever here. Filling in your concept details could add ~12 points to your score.",
  "nextBandName": "Viable",
  "primaryLever": "concept",
}
`;
